[tool]
[tool.pdm]


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "numpy>=1.17.3",
    "pandas>=1.1.5",
    "stockstats>=0.4.0",
    "yfinance",
    #"elegantrl",
    "matplotlib",
    "scikit-learn>=0.21.0",
    "gym>=0.17",
    "stable-baselines3[extra]",
    "ray[default]",
    "ray[tune]",
    "lz4",
    "tensorboardX",
    "gputil",
    "exchange-calendars",
    "alpaca-trade-api>=2.1.0",
    "ccxt==1.66.32",
    "jqdatasdk",
    "wrds",
    "pytest",
    "setuptools==59.5.0",
    "wheel>=0.33.6",
    "pre-commit",
    "pyfolio @ git+https://github.com/quantopian/pyfolio.git#egg=pyfolio-0.9.2",                     
    "elegantrl @ git+https://github.com/AI4Finance-Foundation/ElegantRL.git#egg=elegantrl",
    "exchange-calendars==3.6.2"
]
requires-python = "==3.9.9"
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
