[project]
name = "finrl"
version = "0.3.5"
description = "FinRL: Financial Reinforcement Learning Framework."
keywords = ["Reinforcement Learning", "Finance"]
readme = "README.md"
authors = [
    {name = "Hongyang Yang, Xiaoyang Liu", email = "hy2500@columbia.edu"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = "==3.9.9"
dependencies = [
    "alpaca_trade_api>=2.1.0",
    "ccxt==1.66.32",
    "elegantrl",
    "elegantrl @ git+https://github.com/AI4Finance-Foundation/ElegantRL.git#egg=elegantrl",
    "exchange_calendars==3.6.3",
    "gputil",
    "gym>=0.17",
    "jqdatasdk",
    "lz4",
    "matplotlib",
    "numpy>=1.17.3",
    "pandas>=1.1.5",
    "pre-commit",
    "pyfolio @ git+https://github.com/quantopian/pyfolio.git#egg=pyfolio-0.9.2",
    "pytest",
    "ray[default]",
    "ray[tune]",
    "scikit-learn>=0.21.0",
    "setuptools==59.5.0",
    "stable-baselines3[extra]",
    "stockstats>=0.4.0",
    "tensorboardX",
    "wheel>=0.33.6",
    "wrds",
    "yfinance",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/finrl/finrl-library"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "jupyter>=1.0.0",
    "quantstats>=0.0.56",
    "dm-tree>=0.1.7",
    "trepan3k>=1.2.8",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
